Ripped out Log4Net and replaced with CrossSimpleLogger

--- a/source/XamarinHabanero/Habanero.Base/Habanero.Base.csproj
+++ b/source/XamarinHabanero/Habanero.Base/Habanero.Base.csproj
@@ -39,12 +39,16 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\MonoAndroid\v1.0\Java.Interop.dll</HintPath>
     </Reference>
-    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821">
-      <HintPath>..\..\packages\log4net.1.2.10\lib\1.1\log4net.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
+    <Reference Include="Plugin.SimpleLogger, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Plugin.SimpleLogger.1.0.3\lib\MonoAndroid10\Plugin.SimpleLogger.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Plugin.SimpleLogger.Abstractions, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Plugin.SimpleLogger.1.0.3\lib\MonoAndroid10\Plugin.SimpleLogger.Abstractions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
@@ -219,7 +223,7 @@
     <Compile Include="Logging\ConsoleLoggerFactory.cs" />
     <Compile Include="Logging\IHabaneroLogger.cs" />
     <Compile Include="Logging\IHabaneroLoggerFactory.cs" />
-    <Compile Include="Logging\Log4NetLogger.cs" />
+    <Compile Include="Logging\CrossSimpleLogger.cs" />
     <Compile Include="Logging\Log4NetLoggerFactory.cs" />
     <Compile Include="Logging\LogCategory.cs" />
     <Compile Include="NullProgressIndicator.cs" />
