Revert "Removed all logging to see if build will work now"
This reverts commit 51914792a0efdfa7a75fc33d1703af7131b87f89.

--- a/source/XamarinHabanero/Habanero.Base/Habanero.Base.csproj
+++ b/source/XamarinHabanero/Habanero.Base/Habanero.Base.csproj
@@ -41,6 +41,14 @@
     </Reference>
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
+    <Reference Include="Plugin.SimpleLogger, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Plugin.SimpleLogger.1.0.3\lib\MonoAndroid10\Plugin.SimpleLogger.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Plugin.SimpleLogger.Abstractions, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Plugin.SimpleLogger.1.0.3\lib\MonoAndroid10\Plugin.SimpleLogger.Abstractions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
